syntax = "proto3";

package spotify.login5.v3;
option csharp_namespace = "Eum.Spotify.login5v3";

message ClientInfo {
    string client_id = 1;
    string device_id = 2;
}
